build.log
    Checking hardware_monitor v0.1.0 (C:\Users\will\thenozzle\hardware_monitor)
error[E0432]: unresolved import `windows::Win32::System::Performance::PDH_FMT_COUNTER_VALUE`
 --> src\main.rs:8:21
  |
8 |     PDH_FMT_DOUBLE, PDH_FMT_COUNTER_VALUE,
  |                     ^^^^^^^^^^^^^^^^^^^^^
  |                     |
  |                     no `PDH_FMT_COUNTER_VALUE` in `Win32::System::Performance`
  |                     help: a similar name exists in the module: `PDH_FMT_COUNTERVALUE`

warning: unused import: `Instant`
 --> src\main.rs:5:27
  |
5 | use std::time::{Duration, Instant};
  |                           ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\main.rs:62:43
    |
 62 |                 if PdhOpenQueryW(None, 0, &mut query).is_ok() {
    |                    -------------          ^^^^^^^^^^ expected `*mut PDH_HQUERY`, found `&mut isize`
    |                    |
    |                    arguments to this function are incorrect
    |
    = note:    expected raw pointer `*mut PDH_HQUERY`
            found mutable reference `&mut isize`
note: function defined here
   --> C:\Users\will\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.60.0\src\Windows\Win32\System\Performance\mod.rs:584:15
    |
584 | pub unsafe fn PdhOpenQueryW<P0>(szdatasource: P0, dwuserdata: usize, phquery: *mut PDH_HQUERY) -> u32
    |               ^^^^^^^^^^^^^

error[E0599]: no method named `is_ok` found for type `u32` in the current scope
  --> src\main.rs:62:55
   |
62 |                 if PdhOpenQueryW(None, 0, &mut query).is_ok() {
   |                                                       ^^^^^ method not found in `u32`

error[E0308]: arguments to this function are incorrect
  --> src\main.rs:68:29
   |
68 |                     let _ = PdhAddCounterW(query, &read_path, 0, &mut read_counter);
   |                             ^^^^^^^^^^^^^^ ----- expected `PDH_HQUERY`, found `isize`
   |
note: expected `*mut PDH_HCOUNTER`, found `&mut isize`
  --> src\main.rs:68:66
   |
68 |                     let _ = PdhAddCounterW(query, &read_path, 0, &mut read_counter);
   |                                                                  ^^^^^^^^^^^^^^^^^
   = note:    expected raw pointer `*mut PDH_HCOUNTER`
           found mutable reference `&mut isize`
note: function defined here
  --> C:\Users\will\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.60.0\src\Windows\Win32\System\Performance\mod.rs:55:15
   |
55 | pub unsafe fn PdhAddCounterW<P1>(hquery: PDH_HQUERY, szfullcounterpath: P1, dwuserdata: usize, phcounter: *mut PDH_HCOUNTER) -> u32
   |               ^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> src\main.rs:69:29
   |
69 |                     let _ = PdhAddCounterW(query, &write_path, 0, &mut write_counter);
   |                             ^^^^^^^^^^^^^^ ----- expected `PDH_HQUERY`, found `isize`
   |
note: expected `*mut PDH_HCOUNTER`, found `&mut isize`
  --> src\main.rs:69:67
   |
69 |                     let _ = PdhAddCounterW(query, &write_path, 0, &mut write_counter);
   |                                                                   ^^^^^^^^^^^^^^^^^^
   = note:    expected raw pointer `*mut PDH_HCOUNTER`
           found mutable reference `&mut isize`
note: function defined here
  --> C:\Users\will\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.60.0\src\Windows\Win32\System\Performance\mod.rs:55:15
   |
55 | pub unsafe fn PdhAddCounterW<P1>(hquery: PDH_HQUERY, szfullcounterpath: P1, dwuserdata: usize, phcounter: *mut PDH_HCOUNTER) -> u32
   |               ^^^^^^^^^^^^^^

error[E0599]: no method named `global_cpu_info` found for struct `sysinfo::System` in the current scope
  --> src\main.rs:79:35
   |
79 |                 m.cpu_usage = sys.global_cpu_info().cpu_usage();
   |                                   ^^^^^^^^^^^^^^^
   |
help: there is a method `global_cpu_usage` with a similar name
   |
79 -                 m.cpu_usage = sys.global_cpu_info().cpu_usage();
79 +                 m.cpu_usage = sys.global_cpu_usage().cpu_usage();
   |

error[E0308]: mismatched types
   --> src\main.rs:102:58
    |
102 |                     if query != 0 && PdhCollectQueryData(query).is_ok() {
    |                                      ------------------- ^^^^^ expected `PDH_HQUERY`, found `isize`
    |                                      |
    |                                      arguments to this function are incorrect
    |
note: function defined here
   --> C:\Users\will\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.60.0\src\Windows\Win32\System\Performance\mod.rs:130:15
    |
130 | pub unsafe fn PdhCollectQueryData(hquery: PDH_HQUERY) -> u32 {
    |               ^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `is_ok` found for type `u32` in the current scope
   --> src\main.rs:102:65
    |
102 |                     if query != 0 && PdhCollectQueryData(query).is_ok() {
    |                                                                 ^^^^^ method not found in `u32`

error[E0308]: mismatched types
   --> src\main.rs:104:56
    |
104 |                         if PdhGetFormattedCounterValue(read_counter, PDH_FMT_DOUBLE, None, &mut value).is_ok() {
    |                            --------------------------- ^^^^^^^^^^^^ expected `PDH_HCOUNTER`, found `isize`
    |                            |
    |                            arguments to this function are incorrect
    |
note: function defined here
   --> C:\Users\will\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.60.0\src\Windows\Win32\System\Performance\mod.rs:474:15
    |
474 | pub unsafe fn PdhGetFormattedCounterValue(hcounter: PDH_HCOUNTER, dwformat: PDH_FMT, lpdwtype: Option<*mut u32>, pvalue: *mut PDH_FMT_COU...
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `is_ok` found for type `u32` in the current scope
   --> src\main.rs:104:104
    |
104 |                         if PdhGetFormattedCounterValue(read_counter, PDH_FMT_DOUBLE, None, &mut value).is_ok() {
    |                                                                                                        ^^^^^ method not found in `u32`

error[E0308]: mismatched types
   --> src\main.rs:107:56
    |
107 |                         if PdhGetFormattedCounterValue(write_counter, PDH_FMT_DOUBLE, None, &mut value).is_ok() {
    |                            --------------------------- ^^^^^^^^^^^^^ expected `PDH_HCOUNTER`, found `isize`
    |                            |
    |                            arguments to this function are incorrect
    |
note: function defined here
   --> C:\Users\will\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.60.0\src\Windows\Win32\System\Performance\mod.rs:474:15
    |
474 | pub unsafe fn PdhGetFormattedCounterValue(hcounter: PDH_HCOUNTER, dwformat: PDH_FMT, lpdwtype: Option<*mut u32>, pvalue: *mut PDH_FMT_COU...
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `is_ok` found for type `u32` in the current scope
   --> src\main.rs:107:105
    |
107 |                         if PdhGetFormattedCounterValue(write_counter, PDH_FMT_DOUBLE, None, &mut value).is_ok() {
    |                                                                                                         ^^^^^ method not found in `u32`

Some errors have detailed explanations: E0308, E0432, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `hardware_monitor` (bin "hardware_monitor") generated 1 warning
error: could not compile `hardware_monitor` (bin "hardware_monitor") due to 12 previous errors; 1 warning emitted
